# prodigal-automation

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  TESTING.md  pyproject.toml  requirements.txt  requirements_dev.txt  tempCodeRunnerFile.python
.github/workflows/: ci.yml
src/prodigal_automation/: __init__.py  auth.py  cli.py  client.py  facebook.py  facebook_manager.py  instagram.py  instagram_manager.py  oauth.py  setup.py  tools.py  twitter.py  twitter_manager.py
src/prodigal_automation/core/: auth.py  base_client.py  client.py  errors.py  models.py
src/prodigal_automation/examples/: .env.example  __init__.py  facebook_example.py  twitter-example.py  twitter-multi-tenant.py  twitter_example.py  twitter_multi_tenant.py
src/prodigal_automation/facebook/: facebook.py  facebook_client.py  facebook_manager.py
src/prodigal_automation/tool_modules/: __init__.py  facebook.py  linkedin.py  manager.py  twitter.py
src/prodigal_automation/tools/: linkedin.py
src/prodigal_automation/twitter/: twitter.py  twitter_client.py  twitter_manager.py
src/prodigal_automation/utils/: tools.py
tests/: facebook_test.py  test_auth.py  test_facebook_client.py  test_facebook_manager.py  test_tools.py  test_twitter_integration.py  test_twitter_manager.py  twitter_test.py
