[tool.poetry]
name = "prodigal-automation"
version = "0.1.4"
description = "Agentic tools & OAuth/RBAC support for Prodigal Automation"
authors = ["RANGDAL PAVANSAI", "WAGMARE SANJANA", "ANKIT TAYAL"]
license = "MIT"
readme = "README.md"
packages = [{ include = "prodigal_automation", from = "src" }]

[tool.poetry.dependencies]
python        = "^3.12"
pydantic      = "^2.1.1"
fastapi       = "^0.100.0"
requests      = "^2.31.0"
requests-oauthlib = "^1.3.1"
python-dotenv = "^1.1"
tweepy = "^4.15.0"
# If you want async:
# httpx = "^0.24.0"
google-generativeai = "^0.8.5"
facebook-sdk = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "24.3.0"
isort = "5.13.2"
flake8 = "7.0.0"
pytest-mock = "3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage"       = "https://github.com/Prodigal-AI/prodigal-automation"
"Repository"     = "https://github.com/Prodigal-AI/prodigal-automation"
"Documentation"  = "https://prodigal-automation.readthedocs.io"
"Bug Tracker"    = "https://github.com/Prodigal-AI/prodigal-automation/issues"

[tool.black]
line-length = 88